--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "loading-time-frontend",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
+  "homepage": "https://o-anna-o.github.io/loading-time-frontend/",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
