--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,31 @@
-node_modules
-dist
-dist-ssr
+# dependencies
+node_modules/
+.pnp/
+.pnp.js
+
+# production
+dist/
+dist-ssr/
 *.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
+# testing
+coverage/
+
+# vite
+.vite/
+
+# env files
+.env
+.env.*.local
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# VS Code
+.vscode/
