--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://o-anna-o.github.io/loading-time-frontend/",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
