--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,38 @@
-# dependencies
-node_modules/
-.pnp/
-.pnp.js
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# production
+pids
+*.pid
+*.seed
+*.pid.lock
+
+node_modules/
 dist/
 dist-ssr/
 *.local
 
-# testing
-coverage/
-
-# vite
-.vite/
-
-# env files
-.env
-.env.*.local
-
-# OS
+.vscode/*
+!.vscode/extensions.json
+.idea/
 .DS_Store
-Thumbs.db
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# VS Code
-.vscode/
+ca.key
+ca.crt
+cert.key
+cert.crt
