--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "loading-time-frontend",
-  "version": "0.0.0",
+  "name": "loading_time_frontend",
+  "version": "0.1.0",
   "private": true,
-  "homepage": "https://o-anna-o.github.io/loading-time-frontend/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "generate-api": "node scripts/generate-api.mjs"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.10.1",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -21,11 +20,15 @@
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^2.9.4",
+    "@types/node": "^25.0.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^4.0.0",
     "gh-pages": "^6.3.0",
+    "swagger-typescript-api": "^13.2.16",
     "typescript": "^5.0.0",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "vite-plugin-mkcert": "^1.17.9"
   }
 }
